src/components/Navframe/index.css
@media only screen and (max-width: 999px) and (min-width: 500px){

    .navbar {
        visibility: hidden;
    }
}
.navbar {
    font-size: 1.5em;
    padding-left: 10px;
    padding-right: 10px;
    background-color: navy;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    width: 100%;
}
.navbar-nav {
    width: 100%;
}
#home {
    margin-left: 15px;  
}
#user {
    float: right;
    margin-right: 15px;
}
#hall {
    float: right;
    margin-right: 15px;
}

